Add DTO and mappers for chat functionality, utilizing MapStruct for object transformations. Implement MessageDto, ChatMessageMapper, ChatResponseMapper, and ChatSessionMapper to streamline message and session handling in the chat service.